# CN3S

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
nbs/: 01-Testes_Iniciais.ipynb
src/cn3s/: __init__.py  core.py
